--- a/food.html
+++ b/food.html
@@ -57,6 +57,24 @@
                     document.getElementById("demo").innerHTML = "PARTY TIME!!!";
                 }
                 }, 1000);
+                function sendFood() {
+                    const xhr = new XMLHttpRequest();
+                    xhr.open("POST", "http://localhost:3000/food",);
+
+                    // Send the proper header information along with the request
+                    xhr.setRequestHeader("Content-Type", "application/json");
+
+                    xhr.onreadystatechange = () => {
+                        
+                    };
+
+                    var name = 'asdasd'
+                    var cook = 'asdasdasd'
+
+                    var food = { name, cook }
+
+                    xhr.send(JSON.stringify(food));
+                }
         </script>
     </head>
     <body>
@@ -136,7 +154,7 @@
 
             </fieldset>
             <div id="food_div"></div>
-            <div id="accept_food"></div>
+            <div id="accept_food" onclick="sendFood()"></div>
         </div>
     </body>
 </html>
